# yolov8-pose-ort

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: yolov8_ort_pose.hpp
src/: yolov8_ort_pose.cpp
